# TesteMQTTold

./: CMakeLists.txt  README.md  sdkconfig.old
Recursos/: SELDIPLACA.txt  input_teclado.txt  links.txt
components/IOconfigs/: CMakeLists.txt  ioplaca.c  ioplaca.h
components/LCD/: CMakeLists.txt  lcdvia595.c  lcdvia595.h
components/wifi/: CMakeLists.txt  connect.c  connect.h
main/: CMakeLists.txt  app_main.c
